# nektar-sandbox

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindNektar++.cmake
examples/: .gitignore
examples/helmsolve_tests/: README.md
examples/helmsolve_tests/2DL_ORIG_DDD/: helmsolve_tests.xml
examples/helmsolve_tests/2DL_ORIG_DDP/: helmsolve_tests.xml
examples/helmsolve_tests/3D_FPM_DDD/: helmsolve_tests.xml
examples/helmsolve_tests/3D_FPM_DDP/: helmsolve_tests.xml
examples/helmsolve_tests/3D_FPM_DPP/: helmsolve_tests.xml
examples/helmsolve_tests/3D_FPM_PPP/: helmsolve_tests.xml
examples/helmsolve_tests/3D_ORIG_DDD/: helmsolve_tests.xml
examples/helmsolve_tests/3D_ORIG_DDN/: helmsolve_tests.xml
examples/helmsolve_tests/3D_ORIG_DDP/: helmsolve_tests.xml
examples/helmsolve_tests/VCs_ORIG_DDP/: helmsolve_tests.xml  run_cmd_template.txt
helmsolve_tests/: CMakeLists.txt  README.md  main.cpp
scripts/: run_eg.sh
solver_template/: CMakeLists.txt  main.cpp
